add ao-core